--- a/app/composer.json
+++ b/app/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
+        "overblog/graphql-bundle": "^0.14.1",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
@@ -36,6 +37,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "overblog/graphiql-bundle": "^0.2.1",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "4.4.*",
         "symfony/css-selector": "4.4.*",
