--- a/app/composer.json
+++ b/app/composer.json
@@ -37,6 +37,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "overblog/graphiql-bundle": "^0.2.1",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "4.4.*",
