Создание графов и Query запросов

--- a/app/config/packages/graphql.yaml
+++ b/app/config/packages/graphql.yaml
@@ -1,7 +1,7 @@
 overblog_graphql:
     definitions:
         schema:
-            query: Query
+            query: RootQuery
         mappings:
             types:
                 -
