--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -28,3 +28,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\GraphQL\Resolver\CustomResolverMap:
+        tags:
+            - { name: overblog_graphql.resolver_map, schema: default }
